# webSearch

./: .env.example  README.md  config.py  graph.py  main.py  models.py  orchestrator.py  pyproject.toml
agents/: crawl.py  planner.py  reflection.py  search.py  summarize.py  verify.py
interface/: http_app.py  mcp_app.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
prompts/: crawl.md  planner.md  reflection.md  search.md  summarize.md  verify.md
services/: benchmark.py  config_service.py  logging.py  model_adapter.py  observability.py  quality.py  retry.py  snapshot.py  state_store.py
tests/: test_graph.py  test_integration.py  test_interfaces.py  test_model_adapter.py  test_model_routing.py  test_orchestrator.py  test_services.py  test_tools.py
tools/: cache.py  citations.py  fetch.py  parse.py  rate_limit.py  search.py
