[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "websearch"
version = "0.1.0"
description = "Multi-agent research web search prototype"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115",
	"beautifulsoup4>=4.12",
	"httpx>=0.27",
	"uvicorn>=0.32",
]

[project.scripts]
websearch = "main:main"

[tool.pytest.ini_options]
pythonpath = ["."]

